fix: z-index for running-tape

--- a/src/page/home/sections/s2/s2.style.sass
+++ b/src/page/home/sections/s2/s2.style.sass
@@ -1,6 +1,8 @@
 @import  ../../../global/sass/mixins
 
 .s2
+  position: relative
+  z-index: 1
   margin-left: -20px
   margin-right: -20px
   +margin(margin-bottom, 105px)
